change system.out.println to log.info and some small fixes